Completed rough layout of "Create Group" page in android studio. Added drawables for a add photo/group button and a general add button. Interactions haven't been started. Colours were chosen at random and line colours must be changed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">TimeHunter</string>
+    <string name="group_descrip">Group Description:</string>
+    <string name="group_name">Group Name:</string>
+    <string name="add_photo_label">Add Group Photo</string>
+    <string name="create_group_title">Create Group</string>
+    <string name="create_confirm">Create</string>
+    <string name="cancel_button">Cancel</string>
+    <string name="group_info">Enter Group Information</string>
 </resources>
