Changed resources which were hardcoded

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="group_name">Group Name:</string>
     <string name="add_photo_label">Add Group Photo</string>
     <string name="create_group_title">Create Group</string>
-    <string name="create_confirm">Create</string>
+    <string name="confirm">Confirm</string>
+    <string name="create">Create</string>
     <string name="cancel_button">Cancel</string>
     <string name="group_info">Enter Group Information</string>
     <string name="confirm_page_title">Confirm Group Details</string>
